--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,32 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- internet permission -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- gps locate permission -->
-    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <!--允许访问网络，必选权限允许程序打开网络套接字-->
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--允许获取网络状态-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <!--允许获取wifi网络信息-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <!--允许写入扩展存储，用于数据缓存，若无此权限则写到私有目录允许程序设置内置sd卡的写权限-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <!--允许写设备缓存，用于问题排查-->
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"
-        tools:ignore="ProtectedPermissions" />
-
-    <!--允许读设备等信息，用于问题排查-->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
@@ -39,23 +21,36 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
 
-        <!--高德apikey-->
-        <meta-data
-            android:name="com.amap.api.v2.apikey"
-            android:value="247ff0dd76389d3e8feac674a2f38a76"/>
-
-
-        <activity
-            android:name=".ExerciseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        <activity android:name=".welcomeActivity"
+            android:exported="true">  <!-- Required for apps targeting Android 12 and beyond -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity
+            android:name=".AccountCheckActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".registerActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".loginActivity"
+            android:exported="true"/>
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="247ff0dd76389d3e8feac674a2f38a76" />
+
+        <activity
+            android:name=".ExerciseActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+    </application>
 </manifest>
