--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -22,16 +22,16 @@
         tools:targetApi="31">
 
         <activity android:name=".welcomeActivity"
-            android:exported="true">  <!-- Required for apps targeting Android 12 and beyond -->
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".AccountCheckActivity"
-            android:exported="false"/>
+        <activity android:name=".AccountCheckActivity"
+            android:exported="true"/>
+
 
         <activity
             android:name=".registerActivity"
