--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31">
 
         <activity android:name=".welcomeActivity"
-            android:exported="true">
+            android:exported="true">  <!-- This needs to be true if this is the entry point of your app -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,7 +30,7 @@
         </activity>
 
         <activity android:name=".AccountCheckActivity"
-            android:exported="true"/>
+            android:exported="true"/>  <!-- This needs to be true to be accessible from other activities -->
 
 
         <activity
