--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -25,16 +25,19 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
-            android:windowSoftInputMode="adjustResize"
+            android:name=".FriendListActivity"
             android:exported="false" />
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MessageActivity"
             android:exported="false" />
         <activity
             android:name=".UserProfileActivity"
             android:exported="false"
-            android:theme="@style/Theme.MyApplication" /> 
+            android:theme="@style/Theme.MyApplication" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -54,34 +57,32 @@
             android:name=".MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
-
         <activity
             android:name=".registerActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".loginActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
-
-        <activity android:name=".welcomeActivity"
-            android:exported="true">  <!-- This needs to be true if this is the entry point of your app -->
+        <activity
+            android:name=".welcomeActivity"
+            android:exported="true"> <!-- This needs to be true if this is the entry point of your app -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
