--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -25,29 +25,29 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".FriendProfileActivity"
+            android:name=".activity.FriendProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ExerciseRecordDetailActivity"
+            android:name=".activity.ExerciseRecordDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".activity.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".FriendListActivity"
+            android:name=".activity.FriendListActivity"
             android:exported="false" />
         <activity
-            android:name=".ExerciseRecordActivity"
+            android:name=".activity.ExerciseRecordActivity"
             android:exported="false" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".activity.ChatActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".MessageActivity"
+            android:name=".activity.MessageActivity"
             android:exported="false" />
         <activity
-            android:name=".UserProfileActivity"
+            android:name=".activity.UserProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.MyApplication" />
         <!--
@@ -66,17 +66,17 @@
             android:value="AIzaSyCtZ3B8py_kQByBaftxWw40Jq7uXCQNX_I" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".activity.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".activity.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
 
             <!-- <intent-filter> -->
@@ -87,7 +87,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".activity.WelcomeActivity"
             android:exported="true"> <!-- This needs to be true if this is the entry point of your app -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
