main activity revise

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".activity_bottom_nav"
+            android:exported="false" />
+        <activity
+            android:name=".activity.BottomNavMenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.FriendProfileActivity"
             android:exported="false" />
         <activity
