--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -42,25 +42,25 @@ code:
 # (or remove it altogether if you haven't used any external assets)
 assets:
   # NOTE: "Bliss" is just here as an example, you SHOULD REMOVE IT
-  - comment: "_Bliss_ by Charles O'Rear"
-    url: https://en.wikipedia.org/wiki/Bliss_(image)
-    licence: fair use
+  - comment:
+    url: 
+    licence:
 
 
 ### Questions (answer before final submission):
 1. You (as a group) completed this work (tick the most appropriate option):
   - [ ] by yourself (as a group) without the help of others;
-      [ ] with Gen AI tools (e.g., ChatGPT, Co-Pilot).
+      [x] with Gen AI tools (e.g., ChatGPT, Co-Pilot).
       [ ] using online resources (e.g., Stackoverflow, blogs)
 
 2. If not completed by yourself only, how did the use of Gen AI tools (and which ones), contribute to completing this assignment?
-  - Tool(s): <tools used here>
+  - Tool(s): <CHATGPT>
   
 3. How did they contribute to the completion of this assignment?
-  - <your answer here>
+  - <Debugging and commenting>
 
 4. How long did it take to complete this assignment (approximately, in hours)?
-  - <your answer here> hours
+  - <50> hours
 
 
 
